--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.1
+  flutter_localizations:
+    sdk: flutter
+  shared_preferences: ^0.5.6+2
+  intl: ^0.16.0
   cupertino_icons: ^0.1.2
   flutter_bloc: ^4.0.0
   equatable: ^1.1.1
@@ -65,6 +68,9 @@ flutter:
     - assets/images/icons/icons_16x16/
     - assets/images/icons/icons_128x128/
     - assets/images/logo/
+  # i18n assests
+    - lib/lang/en.json
+    - lib/lang/ar.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
